--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -77,7 +77,7 @@ strong {
 }
 
 .wrapper {
-  width:650px;
+  width:800px;
   margin:0 auto;
   position:relative;
 }
@@ -288,11 +288,11 @@ header {
 
 section {
   width:800px;
-  padding: 30px 30px 50px 30px;
-  margin: 20px 0;
+  margin: 0;
+  padding: 30px 30px 30px 30px;
   margin-top: 190px;
   position:relative;
-  background: #fbfbfb;
+  background: #F2F3F5;
   border-radius: 20px;
   border: 1px solid #cbcbcb;
   box-shadow: 0px 1px 2px rgba(0,0,0,.09), inset 0px 0px 2px 2px rgba(255,255,255,.5), inset 0 0 5px 5px rgba(255,255,255,.4);
@@ -300,64 +300,6 @@ section {
 
 small {
   font-size:12px;
-}
-
-nav {
-  width: 230px;
-  position: fixed;
-  top: 220px;
-  left:50%;
-  margin-left:-580px;
-  text-align: right;
-
-  ul {
-    list-style: none;
-    list-style-image:none;
-    font-size: 15px;
-    line-height:24px;
-
-    li {
-      padding: 5px 0px;
-      line-height: 16px;
-      // padding-right:17px;
-      // position:relative;
-      // right:-12px;
-
-      &.tag-h1 {
-        font-size: 1.2em;
-
-        a {
-          font-weight: bold;
-          color: #333;
-          //color: #ffffff;
-        }
-
-        + .tag-h2 {
-
-        }
-      }
-
-      &.tag-h2 {
-
-        + .tag-h1 {
-          margin-top:10px;
-        }
-      }
-    }
-
-    a {
-      //color: #666;
-      color: #707070;
-      font-weight: bold;
-
-      &:hover { color: #999; }
-    }
-
-    // .active {
-    //   border-right:solid 4px #39C;
-    //   padding-right:13px;
-    // }
-  }
 }
 
 footer {
@@ -375,10 +317,6 @@ footer {
   div.wrapper {
     width:auto;
     margin:0;
-  }
-
-  nav{
-    display: none;
   }
 
   header, section, footer {
