--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -96,7 +96,7 @@ blockquote {
 
 code {
   font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  font-size:18px;
+  font-size:16px;
   color:#efefef;
   text-shadow: 0px 1px 0px #000;
   margin: 0 4px;
@@ -191,6 +191,27 @@ header {
   }
 }
 
+#home #banner .home {
+  //border: 1px solid #dba500;
+  border: 1px solid #c0c0c0;
+  //background: linear-gradient(rgb(255, 231, 136), rgb(255, 206, 56));
+  border-radius: 5px;
+  box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
+  //background-color: #FFE788;
+  background-color: #c0c0c0;;
+  margin-left: 5px;
+  padding: 10px 12px;
+  margin-top: 6px;
+  line-height:14px;
+  font-size:14px;
+  color:#333;
+  font-weight: bold;
+  display:inline-block;
+  text-align:center;
+  background: linear-gradient(rgb(255, 231, 136), rgb(255, 231, 136));
+  background-color: #ffeca0;
+}
+
 #banner {
   z-index: 100;
   left:0;
@@ -211,7 +232,7 @@ header {
     //border: 1px solid #dba500;
     border: 1px solid #c0c0c0;
     //background: linear-gradient(rgb(255, 231, 136), rgb(255, 206, 56));
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
     //background-color: #FFE788;
     background-color: #c0c0c0;;
@@ -275,7 +296,7 @@ header {
     }
   }
 
-  #logo {
+  #github_logo {
     position:absolute;
     height: 36px;
     width: 36px;
@@ -303,10 +324,10 @@ small {
 }
 
 nav {
-  width: 230px;
+  width: 325px;
   position: fixed;
   top: 220px;
-  left:50%;
+  left:45%;
   margin-left:-580px;
   text-align: right;
 
@@ -317,8 +338,8 @@ nav {
     line-height:24px;
 
     li {
-      padding: 5px 0px;
-      line-height: 16px;
+      padding: 10px 0px;
+      line-height: 20px;
       // padding-right:17px;
       // position:relative;
       // right:-12px;
@@ -403,7 +424,7 @@ footer {
     .fork {
     }
 
-    #logo {
+    #github_logo {
       margin-right: 15px;
     }
   }
