--- a/_sass/case_study.scss
+++ b/_sass/case_study.scss
@@ -14,7 +14,7 @@ by Matt Graham
 }
 
 body {
-  font:14px/22px 'Quattrocento Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:15px/22px 'Quattrocento Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#2b2b2b;
   font-weight:300;
   margin: 0px;
@@ -124,6 +124,65 @@ code {
   text-align:center;
   background: linear-gradient(rgb(255, 231, 136), rgb(255, 231, 136));
   background-color: #ffeca0;
+}
+
+nav {
+  width: 325px;
+  position: fixed;
+  top: 220px;
+  left:41%;
+  margin-left:-580px;
+  text-align: right;
+
+  ul {
+    list-style: none;
+    list-style-image:none;
+    font-size: 15px;
+    line-height:24px;
+
+    li {
+      padding: 10px 0px;
+      line-height: 20px;
+      // padding-right:17px;
+      // position:relative;
+      // right:-12px;
+
+      &.tag-h1 {
+        font-size: 1.3em;
+
+        a {
+          font-weight: bold;
+          color: #333;
+          //color: #ffffff;
+        }
+
+        + .tag-h2 {
+
+        }
+      }
+
+      &.tag-h2 {
+        font-size: 0.9em;
+
+        + .tag-h1 {
+          margin-top:10px;
+        }
+      }
+    }
+
+    a {
+      //color: #666;
+      color: #707070;
+      font-weight: bold;
+
+      &:hover { color: #999; }
+    }
+
+    // .active {
+    //   border-right:solid 4px #39C;
+    //   padding-right:13px;
+    // }
+  }
 }
 
 pre {
@@ -313,7 +372,7 @@ header {
 }
 
 section {
-  width:800px;
+  width:840px;
   margin: 0;
   padding: 30px 30px 30px 30px;
   margin-top: 190px;
