--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -19,11 +19,10 @@ body {
   font-weight:300;
   margin: 0px;
   padding:0px 0 20px 0px;
-  opacity: 90%;
-  background: rgb(40,62,74);
+  opacity: 92%;
+  //background: rgb(40,62,74);
   background: radial-gradient(circle, rgba(40,62,74,1) 0%, rgba(21,37,48,1) 84%, rgba(1,11,20,1) 100%);
   //background: #010B14 top center repeat-x;
-  background-size: auto 9%;
   //background: #e0e0e0;
 }
 
@@ -319,6 +318,7 @@ header {
 section {
   width:800px;
   margin: 0;
+  opacity: 90%;
   padding: 30px 30px 30px 30px;
   margin-top: 190px;
   position:relative;
