Attempt to fix side nav bar

--- a/_sass/case_study.scss
+++ b/_sass/case_study.scss
@@ -130,12 +130,12 @@ code {
 }
 
 nav {
+  //background-color: #ffffff;
   opacity: 95%;
-  width: 325px;
+  width: auto;
   position: fixed;
   top: 220px;
-  left:41%;
-  margin-left:-580px;
+  left:80%;
   text-align: right;
 
   ul {
